partial fix for svg origin bug on mobile prod

--- a/src/styles/components/_svgs.scss
+++ b/src/styles/components/_svgs.scss
@@ -30,7 +30,8 @@ svg:not(:root) {
 
   .svg-web-top {}
   .svg-web-gear {
-    transform-origin: 50% 50%;
+    //50% 50% not working
+    //transform-origin: 182px 155px;
     //animation: spin 5s infinite linear;
   }
 }
